<resources>
    <string name="app_name">SUDOKU v1.0</string>
    <string name="sudoku">Sudoku</string>

    <string name="hra">Hrej!</string>
    <string name="pokracovat">Pokračovat</string>
    <string name="vysledky">Výsledky</string>
    <string name="napoveda">Nápověda</string>
    <string name="konec">Konec</string>

    <string name="klavesnice">Klávesnice</string>
    <string name="slepa_ulice">Slepá ulička, něco si udělal špatně - máš shodu čísel.</string>

    <string name="instrukce_1">1. V sudoku je úkolem vyplnit všechny čtverce čísly. Čísla jsou od 1 do 9.</string>
    <string name="instrukce_2">2. Plocha je rozdělena do menších čtverců a uvnitř nich se musí vyskytovat každé číslo 1 až 9.</string>
    <string name="instrukce_3">3. Čísla se musí obsazovat tak, aby se stejné číslo nevyskytovalo v řádku ani sloupci ani menším čtverci 2x.</string>
    <string name="zpet">Zpět</string>

    <string name="vyber_obtiznost">Vyber obtížnost:</string>
    <string name="obtiznost_lehka">Lekhá</string>
    <string name="obtiznost_normal">Normalní</string>
    <string name="obtiznost_tezka">Těžká</string>
    <string name="obtiznost_vlastni">Vlastní</string>

    <string name="zacit_hru">Začni hru</string>
    <string name="kontrola">Zkontrolovat</string>
    <string name="spravne">Správně</string>
    <string name="spatne">Špatně</string>
    <string name="uspesna_nova_hra">Nova hra ulozena</string>
    <string name="error_change">Nejde zmenit</string>

    <string name="vyhra">Vyhrál si!</string>
    <string name="vyhra_zprava">Prosím vyplň svůj nick a pod ním se uloží tvoje skóre do výsledků.</string>
    <string name="napis_nick">Napiš nick</string>
    <string name="domu">Zpět do hlavního menu</string>

    <string name="music_title">Music</string>
    <string name="music_summary">Hrát muziku na pozadí</string>
</resources>
