<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VyberObtiznosti">

    <TextView
        android:id="@+id/textView_VyberObtiznosti"
        android:layout_width="164dp"
        android:layout_height="36dp"
        android:layout_marginLeft="96dp"
        android:layout_marginEnd="116dp"
        android:text="@string/vyber_obtiznost"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="112dp"
        android:layout_height="97dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_VyberObtiznosti"
        app:layout_constraintVertical_bias="0.094">

        <RadioButton
            android:id="@+id/radioButtonLehka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onObtiznostRadioButtonsClicked"
            android:text="@string/obtiznost_lehka" />

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onObtiznostRadioButtonsClicked"
            android:text="@string/obtiznost_normal" />

        <RadioButton
            android:id="@+id/radioButtonTezka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onObtiznostRadioButtonsClicked"
            android:text="@string/obtiznost_tezka" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="156dp"
        android:onClick="onZacniHruButtonClicked"
        android:text="@string/zacit_hru"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="onZpetButtonClicked"
        android:text="@string/zpet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        android:layout_marginStart="16dp" />

</android.support.constraint.ConstraintLayout>